packages/next-swc/crates/core/tests/errors/server-actions/server-graph/6/output.js
/* __next_internal_action_entry_do_not_use__  */ export default (()=>{});
import ensureServerEntryExports from "private-next-rsc-action-proxy";
ensureServerEntryExports([]);
